# ChangeLog for www-client/mozilla-firefox-bin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.187 2009/04/29 20:31:08 fauli Exp $

  29 Apr 2009; Christian Faulhammer <fauli@gentoo.org>
  mozilla-firefox-bin-3.0.10.ebuild:
  stable x86, security bug 267234

*mozilla-firefox-bin-3.5_beta4 (28 Apr 2009)
*mozilla-firefox-bin-3.0.10 (28 Apr 2009)

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-bin-3.0.9.ebuild, +mozilla-firefox-bin-3.0.10.ebuild,
  -mozilla-firefox-bin-3.1_beta3.ebuild,
  +mozilla-firefox-bin-3.5_beta4.ebuild:
  Version bump

*mozilla-firefox-bin-3.0.9 (22 Apr 2009)

  22 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-bin-3.0.9.ebuild, -mozilla-firefox-bin-3.1_beta2.ebuild:
  Version bump

  02 Apr 2009; Olivier Crête <tester@gentoo.org>
  mozilla-firefox-bin-3.0.8.ebuild:
  Stable on amd64, bug #262704

  30 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-bin-3.0.8.ebuild:
  x86 stable wrt #262704

*mozilla-firefox-bin-3.0.8 (28 Mar 2009)

  28 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-bin-3.0.8.ebuild:
  Version bump

*mozilla-firefox-bin-3.1_beta3 (13 Mar 2009)

  13 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-bin-3.1_beta3.ebuild:
  Version bump

  08 Mar 2009; Markus Meier <maekke@gentoo.org>
  mozilla-firefox-bin-3.0.7.ebuild:
  amd64 stable, bug #261585

  08 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  mozilla-firefox-bin-3.0.7.ebuild:
  stable x86, security bug 261585

*mozilla-firefox-bin-3.0.7 (05 Mar 2009)

  05 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-bin-3.0.5.ebuild, +mozilla-firefox-bin-3.0.7.ebuild:
  Version bump

  14 Feb 2009; Markus Meier <maekke@gentoo.org>
  mozilla-firefox-bin-3.0.6.ebuild:
  amd64/x86 stable, bug #257577

*mozilla-firefox-bin-3.0.6 (04 Feb 2009)

  04 Feb 2009; Raúl Porcel <armin76@gentoo.org>