@@ -67,6 +67,6 @@ DIST mozilla-firefox-3.5_beta4-uk.xpi 138777 RMD160 0ff7f155a321fadb057c735deeb6
 DIST mozilla-firefox-3.5_beta4-vi.xpi 128228 RMD160 964c929d0fbc2a81d74e0abed0c9eca631b6a8f9 SHA1 9306022ceda803e24dea766af543d79df6ac59f2 SHA256 17b2f27790529efe4d8ab5d22d9267ee157b76a45c56b974151ac9a37a28a7ae
 DIST mozilla-firefox-3.5_beta4-zh-CN.xpi 126033 RMD160 a2343d51887abc7f547baa6da91d7d9ce6d4ad87 SHA1 7cf2b07514f3d91cdff51c8b6afc58b606c55e4d SHA256 e3ff4fabdeb2f98e321bab0e0ddc4f2787c74c3e778f01f72de000499b261544
 DIST mozilla-firefox-3.5_beta4-zh-TW.xpi 127480 RMD160 42e0884588d74e69935c9928581ec7c215977c62 SHA1 bb2e54ea702d4810e3599d09b0fce233b8bedb15 SHA256 b45e00acb35b19a935372b1e935439e37051a73754f5f88161d82cec3d3f3659
-EBUILD mozilla-firefox-bin-3.5_beta4.ebuild 5605 RMD160 0350833d3bfc3034daaf55e5d8d173fc81efd0d9 SHA1 5b20f42e1100a563435117fb85d4c5eaf9bf9ca9 SHA256 aa5c99e9456f9d2db111c6ffe30c094bb6772ac0ec093fdfd6f86d6d8cd855f5
-MISC ChangeLog 34929 RMD160 28c571e950695559d7542c6809a0b378dca3b501 SHA1 1025f98099b083ad5fd8a983de6ab9c6f4b9d17b SHA256 f4a2a0532bb3cb9b1f44cf2d0d31e7022e9a9e28174080a43fe81cce0a3f314e
+EBUILD mozilla-firefox-bin-3.5_beta4.ebuild 5395 RMD160 f0b964a6fc9bda74902c8ffe2e6a7c0608afec12 SHA1 fca68caf5e39c0c23dc4f9e5981daf2528eb4a4a SHA256 cc5a55de85759c6f28fb66fcce2d65bcef15c07331fc7b470ee6c15b1e9d4d55
+MISC ChangeLog 35252 RMD160 a0530ef8f1aaaeb90f287a2c6b6e7d27bf2dbbf7 SHA1 fb9072770bd486c864f615efe2e8a7dbcfeadcb7 SHA256 ecb6bc9cf046b0f5bf10da337d2e25f105c07bdb078d89a017fc2f33e2637422
 MISC metadata.xml 361 RMD160 875569d22de792136757a0f5885f7fdd11b40691 SHA1 ef5fecfad87eceaeb1b4af3bbfa4bacebf714277 SHA256 adcb3648206e341af38e084574e9e4851e4e51ffa7356bbeaf205e3e16553d3b
